fix: resolve SonarCloud issues across knowledge graph feature
- CodeGraphStore: replace loop-invariant if/else with setObject()
- CodeGraphExtractor: extract helpers (collectCrossFileEdges, resolveTargetVf),
  replace deprecated getBaseDir with LocalFileSystem, use Collections.addAll
- CodeGraphIndexer: extract indexSingleFile helper to reduce complexity
- GitCommitIndexer: extract parseEntry/parseFileChanges to split complexity
- QueryCodeGraphTool: extract constants (COL_FILE_PATH, COL_SOURCE_FILE),
  flatten nested ternary, use Math.clamp (Java 21)
- CodeGraphSettings: make State fields private + getters/setters (S1104)
- McpProtocolHandler: extract extractFirstPath helper
- ToolRegistry: remove always-true null check
- KnowledgeGraphPanel: rename shadowing variable, use specific exceptions
- PsiBridgeStartup: extract 5 helper methods from execute()
- GitCommitIndexerParseTest: collapse string concats to literals (S6126)

Also marked regex hotspot (S5852) as SAFE via SonarCloud API.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>